fixed bug with scrollbar

--- a/src/components/WindowWithCustomScrollbar/window-with-custom-scrollbar.scss
+++ b/src/components/WindowWithCustomScrollbar/window-with-custom-scrollbar.scss
@@ -40,13 +40,14 @@ $width: 0.5rem;
     position: absolute;
     background-color: pink;
     width: 1.3rem;
+    top: 0;
     height: 6.5rem;
-    top: -3px;
     left: -5px;
     border-radius: 100px;
     z-index: 3;
     img {
       width: 100%;
+      z-index: 2;
     }
   }
   &__fade {
@@ -58,4 +59,14 @@ $width: 0.5rem;
 
     background: url('./bottom-fade.png') bottom center no-repeat;
   }
+}
+
+.input-range {
+  -webkit-appearance: none;
+  height: 200px;
+  border-radius: 5px;
+  background: #ccc;
+  outline: none;
+  writing-mode: bt-lr; /* IE */
+  -webkit-appearance: slider-vertical; /* WebKit */
 }
